Add main, update server;

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 		<title>Test</title>
 	</head>
 	<body>
-		<h2>Hello world!</h2>
+		<h2>gggug</h2>
+		<a href="login.html">login</a>
 	</body>
 </html>
