expand database stuff, start work on verifying inputs, further modularization

--- a/static/index.html
+++ b/static/index.html
@@ -8,8 +8,9 @@
 		<div>
 			<h2>Create User</h2>
 			<form method="POST" action="/create">
-				<label>Username</label><input name="username" type="text" value="" />
-				<label>Password</label><input name="password" type="password" value="" />
+				<label>Username</label><input name="username" type="text" value="" /><br>
+				<label>Password</label><input name="password" type="password" value="" /><br>
+				<label>Privilege(0-2)</label><input name="privilege" type="number" pattern="[0-2]" value="0" />
 				<input type="submit" value="Create" />
 			</form>
 		</div>
